# lib7zip

./: BUILD_INSTRUCTIONS.md  CLAUDE.md  CMakeLists.txt  CODE_REVIEW_REPORT.md  Makefile.in  OPTIMIZATION_SUMMARY.md  README.md  UPGRADE_GUIDE.md  autogen.sh  build.sh  configure  configure.ac  configure~  verify_build.sh
Lib7Zip/: 7ZipArchive.cpp  7ZipArchiveItem.cpp  7ZipArchiveOpenCallback.cpp  7ZipArchiveOpenCallback.h  7ZipCodecInfo.cpp  7ZipCompressCodecsInfo.cpp  7ZipDllHandler.cpp  7ZipFormatInfo.cpp  7ZipInStreamWrapper.cpp  7ZipObjectPtrArray.cpp  7ZipObjectPtrArray_stub.cpp  7ZipOpenArchive.cpp  7zipLibrary.cpp  HelperFuncs.cpp  Makefile.am  Makefile.in  OSFunctions_OS2.cpp  OSFunctions_UnixLike.cpp  OSFunctions_Win32.cpp  SecureString.h  compat.h  lib7zip.h
Test7Zip/: Makefile.am  Makefile.in  Test7Zip.cpp  Test7Zip2.cpp  Test7ZipCryptFileName.cpp  Test7ZipMulti.cpp  Test7ZipRar5.cpp  Test7ZipSignature.cpp  test7zipprops.cpp
includes/: Makefile.am  Makefile.in
src/: 7ZipArchive.cpp  7ZipArchiveOpenCallback.cpp  7ZipCompressCodecsInfo.cpp  7ZipDllHandler.cpp  7ZipInStreamWrapper.cpp  7ZipOpenArchive.cpp  CMakeLists.txt  HelperFuncs.cpp  lib7zip.h
test/: CMakeLists.txt  Test7Zip.cpp  Test7Zip2.cpp  Test7ZipCryptFileName.cpp  Test7ZipDmg.cpp  Test7ZipMulti.cpp  Test7ZipRar5.cpp  Test7ZipSignature.cpp  test7zipprops.cpp  test_archive.cpp
